# klic-desktop

./: .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-installer.yml
scripts/: generate-icons.mjs
scripts/ci/: update-latest-json.mjs
src/: App.tsx  Workspace.tsx  app.tsx  config.ts  main.tsx  styles.css  workspace.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  tokens.ts  types.ts
src/calls/: CallProvider.tsx  CallTile.tsx  CallView.tsx  IncomingCall.tsx  call-provider.tsx  call-tile.tsx  call-view.tsx  incoming-call.tsx  room.ts  screen-share-picker.tsx
src/components/: AuthScreen.tsx  Avatar.tsx  ChatPane.tsx  Friends.tsx  RecentCalls.tsx  Sidebar.tsx  Titlebar.tsx  avatar.tsx  chat-pane.tsx  friends.tsx  recent-calls.tsx  sidebar.tsx  sticker-picker.tsx  titlebar.tsx
src/components/settings/: EditProfile.tsx  MiscPages.tsx  PrivacySecurity.tsx  SavedMessages.tsx  Settings.tsx  about-updates.tsx  edit-profile.tsx  misc-pages.tsx  notifications.tsx  passkeys.tsx  privacy-security.tsx  qr-code.tsx  settings.tsx  ui.tsx
src/icons/: Icon.tsx  icon.tsx  icons.generated.ts
src/realtime/: socket.ts
src/util/: chatTheme.ts  format.ts  theme.ts  updater.ts  upload.ts  window.ts
